--- a/index-2.html
+++ b/index-2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Alvis</title>
+    <link rel="icon" href="ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -74,7 +75,11 @@
                 <li>afnuenfc@gmail.com</li>
                 <li>Jakarta</li>
             </ul>
+            <div class="social-icons">
+                <a href="https://www.instagram.com/alvishardi/"> <i class="fab fa-instagram"></i></a>
+                <a href="https://www.tiktok.com/@alvishardi?lang=id-ID"> <i class="fab fa-tiktok"></i></a>
             </div>
+         </div>
         </div>
     </div>
 </body>
