--- a/index-2.html
+++ b/index-2.html
@@ -77,11 +77,12 @@
                 <li>Jakarta</li>
             </ul>
             <div class="social-icons">
-                <a href="https://www.instagram.com/alvishardi/"> <i class="fab fa-instagram"></i></a>
-                <a href="https://www.tiktok.com/@alvishardi?lang=id-ID"> <i class="fab fa-tiktok"></i></a>
+                <a href="https://www.instagram.com/alvishardi/" target="_blank"><img src="Logo_ig.avif" alt="IG" style="width:60px;height:60px; border-radius:50%;"></a>
+
+                <a href="https://www.tiktok.com/@alvishardi?lang=id-ID" target="_blank"><img src="Logo Tiktok.png" alt="tiktok" style="width:65px;height:60px; border-radius:50%;"></a>
+             </div>
             </div>
-         </div>
-        </div>
-    </div>
+           </div>
+          </div>
 </body>
 </html>
